Fix item card controls not showing in item list view.

--- a/frontend/src/app/components/views/item-list/item-list-view/item-list-view.component.scss
+++ b/frontend/src/app/components/views/item-list/item-list-view/item-list-view.component.scss
@@ -4,6 +4,12 @@
   @apply h-full w-full;
 }
 
+.item-card-list {
+  @apply bg-ghost box-border h-full overflow-x-hidden overflow-y-auto;
+
+  width: calc(100% - 40px);
+}
+
 .spinner-container {
   @apply bg-ghost;
 }
